--- a/HMLFIPA.ipynb
+++ b/HMLFIPA.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "GaussianNB(priors=None, var_smoothing=1.9)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -753,16 +753,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.536943132251099"
+       "0.8302620292444999"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +825,7 @@
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -869,8 +869,8 @@
      "output_type": "stream",
      "text": [
       "Score from the ICA\n",
-      "test score: 0.3699837624681048\n",
-      "train score: 0.3906812557155008\n"
+      "test score: 0.48039897935513803\n",
+      "train score: 0.39515133686761783\n"
      ]
     }
    ],
@@ -886,16 +886,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.536943132251099"
+       "0.8302620292444999"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,22 +914,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test score: 0.48619809788912083\n",
-      "train score: 0.6981576103291489\n"
+      "test score: 0.8471352354442124\n",
+      "train score: 0.6314645111368331\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
     "\n",
-    "clf = AdaBoostClassifier(n_estimators=1,base_estimator=LogisticRegression())\n",
+    "clf = AdaBoostClassifier(n_estimators=1,base_estimator=LogisticRegression(tol=2.3))\n",
     "clf=clf.fit(X_train,y_train)\n",
     "print(\"test score:\",clf.score(X_test,y_test))\n",
     "print(\"train score:\",clf.score(X_train,y_train))"
@@ -940,12 +940,13 @@
    "metadata": {},
    "source": [
     "**the parameters i change**\n",
-    "var_smoothing : The maximum number of estimators at which boosting is terminated. In case of perfect fit, the learning procedure is stopped early."
+    "n_estimators : The maximum number of estimators at which boosting is terminated. In case of perfect fit, the learning procedure is stopped early.\n",
+    "base_estimator : The base estimator from which the boosted ensemble is built."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +956,7 @@
        "                   n_estimators=50, random_state=None)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -974,8 +975,8 @@
      "output_type": "stream",
      "text": [
       "Score from the PCA\n",
-      "test score: 0.39526791927627003\n",
-      "train score: 0.3868378812199037\n"
+      "test score: 0.36372071445140336\n",
+      "train score: 0.337091441617159\n"
      ]
     }
    ],
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -999,8 +1000,8 @@
      "output_type": "stream",
      "text": [
       "Score from the ICA\n",
-      "test score: 0.49292507538854097\n",
-      "train score: 0.46094274587045075\n"
+      "test score: 0.4138250985850151\n",
+      "train score: 0.3517998631477301\n"
      ]
     }
    ],
@@ -1017,16 +1018,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.536943132251099"
+       "0.8302620292444999"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
